--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  dartz: ^0.10.1
+  freezed_annotation: ^1.1.0
+  retrofit: ^3.0.1
+  retrofit_generator: ^3.0.1+1
+  dio: ^4.0.4
+  get_it: ^7.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +44,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mockito: ^5.0.17
+  build_runner: ^2.1.7
+  freezed: ^1.1.0
+  json_serializable: ^6.1.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
