Feature Update: Issue #5
Add `json_annotation` dependency to project.
Ignore generated mocks.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ app.*.map.json
 # Generated files
 *.g.dart
 *.freezed.dart
+*.mocks.dart
 
 # Android Studio will place build artifacts here
 /android/app/debug
