--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   json_annotation: ^4.4.0
-  # bloc: ^8.0.2
   flutter_bloc: ^8.0.1
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
