--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,17 @@ dependencies:
   retrofit_generator: ^3.0.1+1
   dio: ^4.0.4
   get_it: ^7.2.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   json_annotation: ^4.4.0
   flutter_bloc: ^8.0.1
   flutter_spinkit: ^5.1.0
   rx_shared_preferences: ^2.3.0
   shared_preferences: ^2.0.12
   streaming_shared_preferences: ^2.0.0
+  cached_network_image: ^3.2.0
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +55,7 @@ dev_dependencies:
   mockito: ^5.0.17
   build_runner: ^2.1.7
   freezed: ^1.1.0
-  json_serializable: ^6.1.3
+  json_serializable: ^6.1.4
   bloc_test: ^9.0.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
